--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+.container{
+    width: 80%;
+}
 
 
 .modal-title{
@@ -43,4 +46,24 @@ p{
     padding: 4rem;
     margin-top: 5rem;
     height: 100vh;
+}
+#modal{
+    display: none;
+}
+.card{
+    width: 80%;
+    padding: 2rem 3rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    & h1{
+        color: #606C76;
+    }
+}
+
+form{
+    display: grid;
+    grid-column-gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
 }
